fix format button overlapping scrollbar

--- a/client/src/components/Editor/Editor.css
+++ b/client/src/components/Editor/Editor.css
@@ -4,8 +4,8 @@
 
 .button-format {
 	position: absolute;
-	top: 5px;
-	right: 5px;
+	bottom: 10px;
+	right: 20px;
 	outline: 0;
 	cursor: pointer;
 	padding: 4px 12px;
@@ -31,6 +31,8 @@
 	height: 100%;
 	resize: none;
 	padding: 2px 6px;
+
+	font-size: 0.9rem;
 	font-family: sans-serif;
 	color: rgba(240, 240, 240, 1);
 	background-color: rgba(255, 255, 255, 0.1);
